--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@ table {
     src:    url('../fonts/MyriadProRegular.woff') format('woff'),
             url('../fonts/MyriadProRegular.ttf') format('truetype');
 }
-body {
+body,
+input,
+textarea {
     font-size: 1rem;
     font-family: 'MyriadProRegular', Arial, Helvetica, sans-serif;
 }
@@ -173,7 +175,10 @@ nav ul {
     padding: 0 60px;
     font-size: 1.05rem;
     line-height: 1.3rem;
-    color: #777777;
+    color: #666;
+}
+.contactus p {
+    text-align: center;
 }
 .aboutus-btn, .contactus-btn {
     display: flex;
@@ -210,6 +215,232 @@ nav ul {
 }
 .quotes .author {
     color: #ffc219;
+}
+
+/* ============== CONTACT FORM ============= */
+
+.form-container {
+    width: 1170px;
+    position: relative;
+    padding: 2rem;
+    margin: 0 auto;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.form {
+    width: 100%;
+    max-width: 820px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.contact-form {
+    background-color: #ffd45e;
+    position: relative;
+}
+.circle {
+    border-radius: 50%;
+    background: linear-gradient(135deg, transparent 20%, #ffc527);
+    position: absolute;
+}
+.circle.one {
+    width: 130px;
+    height: 130px;
+    top: 130px;
+    right: -40px;
+}
+.circle.two {
+    width: 80px;
+    height: 80px;
+    top: 10px;
+    right: 30px;
+}
+.contact-form:before {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    background-color: #ffd45e;
+    transform: rotate(45deg);
+    top: 50px;
+    left: -13px;
+}
+form {
+    padding: 2.3rem 2.2rem;
+    z-index: 10;
+    position: relative;
+    overflow: hidden;
+}
+.title {
+    color: #fff;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin-bottom: 0.7rem;
+}
+.input-container {
+    position: relative;
+    margin: 1rem 0;
+}
+.input {
+    width: 100%;
+    outline: none;
+    border: 2px solid #fafafa;
+    background: none;
+    padding: 0.6rem 0.8rem;
+    color: #fff;
+    font-weight: 500;
+    font-size: 0.95rem;
+    letter-spacing: 0.5px;
+    border-radius: 25px;
+    transition: 0.3s;
+}
+textarea.input {
+    padding: 0.8rem 0.8rem;
+    min-height: 150px;
+    border-radius: 22px;
+    resize: none;
+    overflow-y: auto;
+}
+.input-container label {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    padding: 0 0.4rem;
+    color: #fafafa;
+    font-size: 0.9rem;
+    font-weight: 400;
+    pointer-events: none;
+    z-index: 1000;
+    transition: 0.5s;
+}
+.input-container.textarea label {
+    top: 1rem;
+    transform: translateY(0)
+}
+.btn {
+    padding: 0.6rem 1.3rem;
+    background-color: #fff;
+    border: 2px solid #fafafa;
+    font-size: 0.95rem;
+    color: #ffc935;
+    line-height: 1;
+    border-radius: 25px;
+    cursor: pointer;
+    outline: none;
+    transition: 0.3s;
+}
+.btn:hover {
+    background-color: transparent;
+    color: #fff;
+    margin: 0;
+}
+.input-container span {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    transform: translateY(-50%);
+    font-size: 0.8rem;
+    padding: 0 0.4rem;
+    color: transparent;
+    pointer-events: none;
+    z-index: 500;
+}
+.input-container span:before,
+.input-container span:after {
+    content: "";
+    position: absolute;
+    width: 10%;
+    opacity: 0;
+    transition: 0.3s;
+    height: 5px;
+    background-color: #ffd45e;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.input-container span:before {
+    left: 50%;
+}
+.input-container span:after {
+    right: 50%;
+}
+.input-container.focus label {
+    top: 0;
+    transform: translateY(-50%);
+    left: 25px;
+    font-size: 0.8rem;
+}
+.input-container.focus span:before,
+.input-container.focus span:after {
+    width: 50%;
+    opacity: 1;
+}
+.contact-info {
+    padding: 2.3rem 2.2rem;
+    position: relative;
+}
+.contact-info .title {
+    color: #ffc935;
+}
+.text {
+    color: #555;
+    margin: 1.5rem 0 2rem 0;
+}
+.information {
+    display: flex;
+    color: #666;
+    margin: 0.7rem 0;
+    align-items: center;
+    font-size: 0.95rem;
+}
+.icon {
+    width: 28px;
+    font-size: 1.7rem;
+    color: #ffd45e;
+    margin-right: 0.7rem;
+}
+.social-media {
+    padding: 2rem 0 0 0;
+}
+.social-media p {
+    color: #555;
+}
+.social-icons {
+    display: flex;
+    margin-top: 0.5rem;
+    font-size: 1.1rem;
+}
+.social-icons a {
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+    background: linear-gradient(45deg, #ffd45e, #ffd86e);
+    color: #fff;
+    text-align: center;
+    line-height: 35px;
+    margin-right: 0.5rem;
+    transition: 0.3s;
+}
+.social-icons a:hover {
+    transform: scale(1.05);
+}
+.contact-info:before {
+    content: "";
+    position: absolute;
+    width: 110px;
+    height: 100px;
+    border: 22px solid #ffd45e;
+    border-radius: 50%;
+    bottom: -77px;
+    right: 50px;
+    opacity: 0.5;
 }
 
 /* ============== FOOTER ============= */
